force-app/main/default/objects/AcctSeed__AP_Disbursement__c/fields/AcctSeed__Account_Payable__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Account_Payable__c</fullName>
    <label>Payable</label>
    <referenceTo>AcctSeed__Account_Payable__c</referenceTo>
    <relationshipLabel>Applied Cash Disbursements</relationshipLabel>
    <relationshipName>Account_Payable_Cash_Disbursements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>