force-app/main/default/objects/AcctSeed__AP_Disbursement__c/fields/AcctSeed__Disbursement_Period__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Disbursement_Period__c</fullName>
    <formula>AcctSeed__Cash_Disbursement__r.AcctSeed__Accounting_Period__r.Name</formula>
    <label>Disbursement Period</label>
    <type>Text</type>
</CustomField>