force-app/main/default/objects/AcctSeed__AP_Disbursement__c/fields/AcctSeed__Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Discount_Amount__c</fullName>
    <formula>AcctSeed__Account_Payable__r.AcctSeed__Discount_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>