force-app/main/default/objects/AcctSeed__AP_Disbursement__c/fields/AcctSeed__Paid_Amount__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Paid_Amount__c</fullName>
    <label>Applied Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>