force-app/main/default/objects/AcctSeed__AP_Disbursement__c/fields/AcctSeed__Payee_Reference__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Payee_Reference__c</fullName>
    <formula>AcctSeed__Account_Payable__r.AcctSeed__Payee_Reference__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payee Reference</label>
    <type>Text</type>
</CustomField>