force-app/main/default/objects/AcctSeed__AP_Disbursement__c/fields/AcctSeed__Status__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Status__c</fullName>
    <label>Posting Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
                <default>true</default>
                <label>Approved</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>