force-app/main/default/objects/AcctSeed__AP_Disbursement__c/validationRules/AcctSeed__Prevent_Modifying_Paid_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>AcctSeed__Prevent_Modifying_Paid_Amount</fullName>
    <active>true</active>
    <description>DO NOT disable this validation rule unless instructed by Accounting Seed Support.</description>
    <errorConditionFormula>(!ISNEW()) &amp;&amp; ROUND(PRIORVALUE(AcctSeed__Paid_Amount__c),2) != ROUND(AcctSeed__Paid_Amount__c,2)</errorConditionFormula>
    <errorDisplayField>AcctSeed__Paid_Amount__c</errorDisplayField>
    <errorMessage>You cannot change Paid Amount value directly.</errorMessage>
</ValidationRule>